--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,14 +47,14 @@
             <ul class="dropdown-menu">
               <% current_user.teams.each do |team| %>
                 <li>
-                  <a href="/chat/show?team=<%=team.id%>"><%=team.teamname%></a>
+                  <%= link_to team.teamname, chats_path(:team => team.id) %>
                 </li>
               <% end %>
               <li role="separator" class="divider"></li>
-              <li><a href="/team/newteam">새로운 팀 만들기</a></li>
+              <li><%=link_to "새로운 팀 만들기", new_team_path%></li>
             </ul>
           </li>
-          <% if !current_page?(:controller => '/team', :action => 'index') and !current_page?(:controller => '/team', :action => 'newteam') and !current_page?(:controller => '/team', :action => 'profile') and !current_page?(:controller => '/team', :action => 'noteam') and !current_page?(:controller => '/team', :action => 'search') and !current_page?(:controller => '/test', :action => 'regmail') %>
+          <% if !current_page?(:controller => "teams", :action => "index") and !current_page?(new_team_path) and !current_page?(profile_teams_path) and !current_page?(noteam_teams_path) and !current_page?(:controller => 'test', :action => 'regmail') and !current_page?(search_teams_path)%>
 
 
 
@@ -65,19 +65,17 @@
             <% @str = "클라우드<span class='glyphicon glyphicon-cloud-download' aria-hidden='true'></span>" %>
             <li><%= link_to @str.html_safe, action: "index", controller: "resumes", team: @team.id %></li>
             <% end %>
-            <% if current_page?(:controller => '/task', :action => 'show')%>
+            <% if current_page?(tasks_path)%>
             <li class="active"><a href="">워크맵<span class="glyphicon glyphicon-stats" aria-hidden="true"></span></a></li>
             <% else %>
             <% @str = "워크맵<span class='glyphicon glyphicon-stats' aria-hidden='true'></span>" %>
-            <li><%= link_to @str.html_safe, action: "show", controller: "task", team: @team %></li>
+            <li><%= link_to @str.html_safe, tasks_path(:team => @team) %></li>
             <% end %>
-            <% if current_page?(:controller => '/chat', :action => 'show')%>
+            <% if current_page?(chats_path)%>
               <li>
-              <form id="exit" action="/team/deletemember" method="post">
+              <%=form_for @team, :url => {:action => "deletemember", :controller => "teams", :id => @team.id}, :html => {:method => "patch" ,:id => "exit"} do |f| %>
                 <input type="hidden" name="team" value="<%=@team.id%>">
-                <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-
-              </form>
+              <% end %>
               <a class="btn btn-link" data-toggle="modal" data-target="#exitmodal">팀 나가기</a>
 
               <div id="exitmodal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog">
@@ -96,13 +94,13 @@
           <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <a class="navbar-brand" href="/team/profile">
-            <img class="img-circle" alt="profile" src="<%= current_user.image.url %>" width="20px" height="20px">
-          </a>
+
+          <%=link_to image_tag(current_user.image.url, :class => "img-circle", :width => "20px", :height => "20px"), profile_teams_path, :class => "navbar-brand" %>
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/team/profile">프로필 바꾸기</a></li>
+              <li><%=link_to "프로필 바꾸기", profile_teams_path %></li>
               <li><a href="https://open.kakao.com/o/sbpof8i">그루퍼와 톡하기!</a></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "로그아웃", destroy_user_session_path, :method => :delete %></li>
@@ -119,7 +117,7 @@
     </div>
   </nav>
   <% if current_user %>
-    <% if current_page?(:controller => '/chat', :action => 'show') or current_page?(:controller => '/resumes', :action => 'index') or current_page?(:controller => '/task', :action => 'show') or current_page?(:controller => '/message', :action => 'show') %>
+    <% if current_page?(chats_path) or current_page?(resumes_path) or current_page?(tasks_path) or current_page?(messages_path) %>
       <div class="row">
         <div class="col-sm-2">
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -128,9 +126,7 @@
                 <div class="row">
                   <div class="col-xs-9">
                     <h4 class="panel-title">
-                      <a id="side_one" href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne">
-                      팀 홈으로
-                      </a>
+                      <%=link_to "팀 홈으로", chats_path(:team => @team.id), :id => "side_one", :data => {:parent => "#accordion"}, :aria => {:expanded => "true", :controls => "collapseOne"} %>
                     </h4>
                   </div>
                   <div class="col-xs-3" style="text-align: right;">
@@ -160,10 +156,10 @@
                 <div class="panel-body" style="max-height: 300px;overflow: auto;">
                   <div class="row">
                     <div class="col-sm-12">
-                      <form action="/team/addmember" method="get">
+                      <%=form_for @team, :url => {:controller => "teams", :action => "addmember", :id => @team.id}, :html => {:method => "get"} do |f| %>
                         <input type="hidden" name="team" value="<%=@team.id%>"/>
                         <button type="submit" class="btn btn-new btn-xs" style="width: 100%;" data-toggle="tooltip" data-placement="bottom" title="팀원 추가"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
-                      </form>
+                      <% end %>
                       <hr />
                     </div>
                   </div>
@@ -300,7 +296,7 @@
 
                   <div class="row collapse" id="addchatroom2">
                     <div class="col-sm-12">
-                      <form action="/chat/create" method="post">
+                      <%= form_for @team, :url => {:action => "create", :controller => "chats"}, :html => {:method => "post"} do |f| %>
                         <input  class="form-control" type="text" name="title" placeholder="방 이름 입력" required>
                         <br>
                         <input type="hidden" name="team" value="<%=@team.id%>">
@@ -323,8 +319,7 @@
                         <button type="submit" value="send" class="btn btn-new btn-sm" id="button_loading" aria-haspopup="true" aria-expanded="false" style="width: 100%">
                           방 만들기
                         </button>
-                        <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-                      </form>
+                      <% end %>
                       <hr />
                     </div>
                   </div>
@@ -335,10 +330,10 @@
                         <% @chats.each do |chat| %>
                           <div class="well well-sm" style="cursor: pointer;" onclick="$('#chat<%=chat.id%>').submit();">
                             <p><%=chat.title%></p>
-                            <form id="chat<%=chat.id%>" action ="/message/show" method="get">
+                            <%=form_for :message, :url => {:controller => "messages", :action => "index"}, :html => {:method => "get", :id => "chat#{chat.id}"} do |f| %>
                               <input type="hidden" name="chat" value="<%=chat.id%>">
                               <input type="hidden" name="team" value="<%=@team.id%>">
-                            </form>
+                            <% end %>
                             <div class="row">
                               <div class="col-xs-12">
                                 <% chat.users.each do |inchat| %>
@@ -381,7 +376,7 @@
                     </div>
                   </div>
                   <div class="row collapse" id="givetask">
-                    <form action="/task/create" method="post">
+                    <%=form_for Task.new do |f| %>
                       <div class="col-sm-12">
                         <hr />
                         <input type="text" class="form-control" name="taskname" id="taskname_text" placeholder="작업의 이름 입력" required>
@@ -433,7 +428,6 @@
                           </div>
                         <% end %>
                       <% end %>
-                      <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
                       <input type="hidden" name="team" value=<%=@team.id%>>
                       <div class="col-sm-12">
                         <br>
@@ -441,7 +435,7 @@
                           일 분배
                         </button>
                       </div>
-                    </form>
+                    <% end %>
                   </div>
                   <div class="row">
                     <div class="col-sm-12">
