--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -17,7 +17,7 @@
               멤버 초대
             </div>
 
-            <form action="/chat/addmember" method="post">
+            <%=form_for @chat, :url => {:controller => "chats", :action => "addmember", :id => @chat.id}, :html => {:method => "patch"} do |f| %>
               <div class="modal-body row">
                 <input type="hidden" name="chat" value="<%=@chat.id%>">
                 <input type="hidden" name="team" value="<%=@team.id%>">
@@ -40,7 +40,7 @@
                   초대
                 </button>
               </div>
-            </form>
+            <% end %>
           </div>
         </div>
       </div>
@@ -50,12 +50,11 @@
             <br>
             <h4>정말 <%=@chat.title%>에서 나가겠습니까?</h4>
             <p>다시 들어오려면 초대가 있어야 합니다</p>
-            <form action="/chat/deletemember" method="post">
+            <%=form_for @chat, :url => {:controller => "chats", :action => "deletemember", :id => @chat.id}, :html =>{:method => "patch"} do |f| %>
               <input type="hidden" name="chat" value="<%=@chat.id%>">
               <input type="hidden" name="team" value="<%=@team.id%>">
-              <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
               <button class="btn btn-new" type="submit">나가기</button>
-            </form>
+            <% end %>
             <br>
           </div>
         </div>
@@ -81,7 +80,7 @@
     </div>
 
 
-      <%= form_for(:message, :url => {:controller => 'message', :action => 'create'}, :remote => true, :html => {:id => "messageform"}) do |f| %>
+      <%= form_for(:message, :url => {:controller => 'messages', :action => 'create'}, :remote => true, :html => {:id => "messageform"}) do |f| %>
         <%= f.hidden_field :chat_id, :value => @chat.id %>
         <div class="form-group has-success has-feedback">
           <div class="dropup">
@@ -90,8 +89,9 @@
                 +
               </span>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                <li onclick="document.getElementById('upload_file').click();"><a><label for="fileupload"  id="upload_file"style="cursor: pointer;"><span class="glyphicon glyphicon-file"></span> 파일업로드</label></a></li>
-                <li onclick="document.getElementById('upload_picture').click();"><a><label for="imageupload"  id="upload_picture" style="cursor: pointer;"><span class="glyphicon glyphicon-picture"></span> 사진업로드</label></a></li>
+                <li id="insteadbtn1"><a><label for="fileupload" id="upload_file"style="cursor: pointer;"><span class="glyphicon glyphicon-file"></span> 파일업로드</label></a></li>
+                <li id="insteadbtn2"><a><label for="imageupload" id="upload_picture" style="cursor: pointer;"><span class="glyphicon glyphicon-picture"></span> 사진업로드</label></a></li>
+
               </ul>
               <input type="text" name="message[content]" class="form-control" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status" autofocus required autocomplete="off">
             </div>
@@ -110,11 +110,11 @@
       <input id="imageupload" type="file" name="image_file" style="visibility:hidden;position:absolute;top:0;left:0;">
     </form>
 
-    <form id="filefileupload" class="form-inline" action="/fileup" method="post" enctype="multipart/form-data" data-remote="true">
+    <%=form_for :message, :url => {:action => "fileup", :controller => "messages"}, :html => {:method => "post", :class => "form-inline", :id => "filefileupload", :enctype => "multipart/form-data"}, :remote => "true" do |f| %>
       <input type="hidden" name="chat_id" value=<%= @chat.id %>>
-      <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
       <input id="fileupload" type="file" name="file_file" onchange="senddirect(this)" style="visibility:hidden;position:absolute;top:0;left:0;">
-    </form>
+    <% end %>
+
 
     <button type="hidden" style="visibility:hidden;position:absolute;top:0;left:0;" class="btn btn-primary btn-lg" id="imshow" data-toggle="modal" data-target="#myModal"></button>
 
@@ -197,18 +197,19 @@
 </div>
 
 <% if @chat.messages.count != 0 %>
-  <form action="/message/updateall" method="put" data-remote=true id="messagelookall">
+  <%=form_for :message, :url => {:action => "updateall", :controller => "messages"}, :remote => "true", :html => {:id => "messagelookall", :method => "patch"} do |f| %>
     <input id="checkmessage" type="hidden" name="message_id" value=<%=@chat.messages.last.id%>>
     <input type="hidden" name="chat_id" value=<%=@chat.id%>>
     <% if @message %>
       <input type="hidden" name="lastread" value="<%=@message.id%>">
     <% end %>
     <input id="checkpoint" type="hidden" name="isupdate" value="false">
-  </form>
+  <% end %>
 <% end %>
 
 
-<form action="/message/update" method="put" data-remote=true id="messagelook" class="newmessages">
+<form action="/messages/update" method="put" data-remote=true id="messagelook" class="newmessages">
+
   <input id="messagelookid" type="hidden" name="message_id" value=<%=@chat.messages.count-1%>>
   <input type="hidden" name="chat_id" value=<%=@chat.id%>>
   <input type="hidden" name="user_id" value=<%=current_user.id%>>
