--- a/app/views/teams/addmember.html.erb
+++ b/app/views/teams/addmember.html.erb
@@ -17,8 +17,7 @@
           <h3>팀원 추가</h3>
           <p1>추가할 팀원의 이메일을 입력하고 초대해보세요!!</p1>
           <br><br>
-          <form class="form-inline" action="/team/adding" method="post">
-            <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+          <%= form_for @team, :url => {:action => "adding", :controller => "teams", :id => @team.id}, :html => {:class => "form-inline", :method => "patch"} do |f| %>
             <div class="form-group"></div>
             <input type="hidden" name="team" value="<%=@team.id%>">
             <input class="form-control" type="email" name="user_email" placeholder="이메일 입력" required>
@@ -26,9 +25,9 @@
             <br>
             <br>
             <div style="text-align: right;">
-              <a href="<%="/chat/show?team="+@team.id.to_s%>">그만 추가하기</a>
+              <%=link_to "그만 추가하기", chats_path(:team => @team.id) %>
             </div>
-          </form>
+          <% end %>
         </div>
       </div>
     </div>
